# SPDX-FileCopyrightText: Kartoza
# SPDX-License-Identifier: AGPL-3.0
#
# Python project configuration for Django BIMS

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-bims"
version = "1.0.0"
description = "Biodiversity Information Management System"
readme = "README.md"
license = {text = "AGPL-3.0"}
requires-python = ">=3.12"
authors = [
    {name = "Kartoza", email = "info@kartoza.com"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django :: 6.0",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

[project.urls]
Homepage = "https://github.com/kartoza/django-bims"
Documentation = "https://github.com/kartoza/django-bims#readme"
Repository = "https://github.com/kartoza/django-bims.git"
Issues = "https://github.com/kartoza/django-bims/issues"

[tool.black]
line-length = 120
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
    | static
    | media
    | node_modules
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip = [".venv", "venv", "migrations", "static", "media", "node_modules"]
known_django = ["django"]
known_third_party = ["rest_framework", "celery", "geonode"]
sections = ["FUTURE", "STDLIB", "DJANGO", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["bims", "core"]
addopts = [
    "--strict-markers",
    "-ra",
    "-q",
    "--tb=short",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["bims", "core"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
    "*/admin.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 50
show_missing = true

[tool.bandit]
exclude_dirs = [".venv", "venv", "tests", "migrations"]
skips = ["B101", "B104", "B311"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "migrations",
    ".venv",
    "venv",
]

[[tool.mypy.overrides]]
module = "django.*"
ignore_missing_imports = true
